--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 </head>
 
 <body>
-    <h1>Gian Raphael</h1>
+    <h1 style="font-size: 210px;">Gian</h1>
     <div class="cloak__wrapper">
         <div class="cloak__container">
             <div class="cloak"></div>
