--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <h2>BSIT Software Engineering Student</h2>
         <p>Literally Tired.
         </p>
-        <a href="#" target="_blank" rel="noreferrer noopener">Home</a>
+        <a href="#" target="_blank" rel="noreferrer noopener">UWI NAKO</a>
     </div>
 </body>
 
