--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         h1:after {
             -webkit-animation: swing var(--speed) infinite alternate ease-in-out;
             animation: swing var(--speed) infinite alternate ease-in-out;
-            content: "404";
+            content: "Gian";
             position: absolute;
             top: 0;
             left: 0;
